--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <div class="container">
     <!-- Левая колонка — подсказка -->
-    <aside class="instructions">
+    <div class="instructions">
       <h2>Как экспортировать чат из Telegram:</h2>
       <ol>
         <li>Выберите чат (личный или групповой)</li>
@@ -20,7 +20,7 @@
         <li>Укажите папку и начните экспорт</li>
         <li>После завершения получите папку. В ней будет JSON-файл result.json. Его и нужно загрузить на сайт</li>
       </ol>
-    </aside>
+    </div>
 
     <!-- Правая часть — интерфейс -->
     <main class="app">
