--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
       </div>
 
       <div>
+        <label for="sizeSlider">Размер слов:</label>
+        <input type="range" id="sizeSlider" min="0.5" max="2.5" step="0.1" value="1" oninput="updateWordSizeFromSlider()">
+      </div>
+
+      <div>
         <label for="wordCountInput">Количество слов:</label>
         <input type="number" id="wordCountInput" value="250" min="10" max="1000" step="10">
       </div>
