Добавил мета теги

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <script src="https://cdn.jsdelivr.net/npm/wordcloud@1.1.0/src/wordcloud2.js"></script>
   <script defer src="script.js"></script>
   <link rel="stylesheet" href="style.css">
+  <meta name="description" content="Создайте облако слов из вашей переписки в Telegram">
+  <meta name="keywords" content="облако слов, Telegram, чат, визуализация, JSON, анализ переписки, облако слов, облако тегов">
 </head>
 <body>
 
