--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="style.css">
   <meta name="description" content="Создайте облако слов из вашей переписки в Telegram">
   <meta name="keywords" content="облако слов, Telegram, чат, визуализация, JSON, анализ переписки, облако слов, облако тегов">
+  <meta name="google-site-verification" content="Foqs1Wa023GWADVbQM5gdw0gHmkbYHMtNy8l_tiLK50" />
 </head>
 <body>
 
