--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Облако слов из Telegram JSON</title>
+  <title>Облако слов из переписки Telegram</title>
   <script src="https://cdn.jsdelivr.net/npm/wordcloud@1.1.0/src/wordcloud2.js"></script>
   <script defer src="script.js"></script>
   <link rel="stylesheet" href="style.css">
