Пытаюсь сделать так, чтобы выдавал в поиске

--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Облако слов из переписки Telegram</title>
   <script src="https://cdn.jsdelivr.net/npm/wordcloud@1.1.0/src/wordcloud2.js"></script>
   <script defer src="script.js"></script>
   <link rel="stylesheet" href="style.css">
-  <meta name="description" content="Создайте облако слов из вашей переписки в Telegram">
   <meta name="keywords" content="облако слов, Telegram, чат, визуализация, JSON, анализ переписки, облако слов, облако тегов">
   <meta name="google-site-verification" content="Foqs1Wa023GWADVbQM5gdw0gHmkbYHMtNy8l_tiLK50" />
+  <meta name="robots" content="index, follow">
+  <title>Облако слов из переписки Telegram — анализ чатов онлайн</title>
+  <meta name="description" content="Создайте визуальное облако слов из ваших чатов Telegram. Просто загрузите файл JSON и получите красивую визуализацию.">
+  <meta name="robots" content="index, follow">
 </head>
 <body>
 
